<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WaitMain" 
    android:parentActivityName="com.waiterhelper.WaitMain">

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/EnterPatrons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/enterPatrons" 
            android:onClick="enterPatrons" />
        
        <Button
            android:id="@+id/Store"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/store" 
            android:onClick="initializeStore"/>
        
        <Button
            android:id="@+id/View"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/view" 
            android:onClick="view"/>
        
        <Button
            android:id="@+id/Load"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/load" 
            android:onClick="load"/>

        <Button
            android:id="@+id/Exit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/exit" 
            android:onClick="exit"/>
        
    </LinearLayout>

</RelativeLayout>